Scp copying file works (actual data file not created yet)